# anirec

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notes/: decisions.txt
reports/: data_report.json
scripts/: evaluate.py  inspect_data.py  prepare.py  prepare_data.py  split.py
src/anirec/: __init__.py  config.py
src/anirec/data/: __init__.py  loader.py  prepare.py  split.py
src/anirec/eval/: metrics.py
src/anirec/models/: base.py  popularity.py
