[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anirec"
version = "0.1.0"
description = "Anime recommendation toolkit"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
